// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminAnalytics /> should render correctly - index 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-jqUVSM hehiTi"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM liWCTR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM liWCTR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM liWCTR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM liWCTR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminAnalytics /> should render correctly with admin user 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin analytics
    </h1>
  </div>
  <div>
    <button
      class="sc-evZas jzlNIL admin-analytics__control"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Reload analytics
      </span>
    </button>
    <button
      class="sc-evZas jzlNIL admin-analytics__control"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="admin-analytics__card-container"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with analytics 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin analytics
    </h1>
  </div>
  <div>
    <button
      class="sc-evZas jzlNIL admin-analytics__control"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Reload analytics
      </span>
    </button>
    <button
      class="sc-evZas jzlNIL admin-analytics__control"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="admin-analytics__card-container"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with initial state 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-jqUVSM hehiTi"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM liWCTR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM liWCTR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM liWCTR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM liWCTR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminAnalytics /> should render correctly with loadError 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin analytics
    </h1>
  </div>
  <div>
    <button
      class="sc-evZas jzlNIL admin-analytics__control"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Reload analytics
      </span>
    </button>
    <button
      class="sc-evZas jzlNIL admin-analytics__control"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Show filters
      </span>
    </button>
  </div>
  <span
    class="sc-fnykZs kIjAem"
  >
    <span
      class="sc-bjUoiL lnnJny"
    >
      Could not load analytics
      <br />
      Something went wrong
    </span>
  </span>
  <div
    class="admin-analytics__card-container"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with loading=true 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin analytics
    </h1>
  </div>
  <div>
    <button
      class="sc-evZas juxlAL admin-analytics__control"
      disabled=""
      type="button"
    >
      <span
        class="sc-ksZaOG idpoLe"
      >
        Reload analytics
      </span>
      <div
        aria-hidden="true"
        class="sc-hAZoDl eImVmd button__loading-spinner"
      >
        <div
          class="sc-iqcoie jUFsFD"
        >
          <div
            class="sc-crXcEl bnEQQz"
          />
          <div
            class="sc-crXcEl REdYz"
          />
          <div
            class="sc-crXcEl cnIsZI"
          />
          <div
            class="sc-crXcEl jStvKR"
          />
          <div
            class="sc-crXcEl dliQGu"
          />
          <div
            class="sc-crXcEl jyzewH"
          />
          <div
            class="sc-crXcEl jSmUjv"
          />
          <div
            class="sc-crXcEl jVOpOT"
          />
        </div>
      </div>
    </button>
    <button
      class="sc-evZas jzlNIL admin-analytics__control"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="admin-analytics__card-container"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with user 1`] = `
<div>
  <div
    class="section__outer"
  >
    <h2
      class="section__heading"
      id="admin-only"
    >
      Admin only
    </h2>
    <span
      class="sc-fnykZs kIjAem"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-iBkjds kXOvCG"
        href="/login"
      >
        Got a different admin account? Log in here.
      </a>
    </span>
  </div>
</div>
`;
